# routine

./: .pre-commit-config.yaml  .python-version  Brewfile  Makefile  README.md  brew_routine.py  disk_routine.py  docker_routine.py  git_routine.py  kubernetes_routine.py  misc_routine.py  pyproject.toml  python_routine.py  routine.py  setup_sandbox_routine.py  utils.py  zsh_routine.py
shell_routine/: aws_sso_login.sh  aws_sso_login_all.sh  create_virtual_env_with_pyenv.sh  export_aws_credentials.sh  set_env_vars.sh  unset_env_vars.sh
shell_routine_alias/: shell_routine_alias.py
zsh_profile_env_files/: starship.toml  zsh_profile_env_files.zshrc  zsh_profile_env_files.zshrc_aliases  zsh_profile_env_files.zshrc_aws_variables  zsh_profile_env_files.zshrc_config_variables  zsh_profile_env_files.zshrc_path_variables
