[tool.poetry]
name = "routine"
version = "0.1.0"
description = "a command line interface for my daily routine task"
authors = ["gauravsinghabacus <gaurav.singh@abacusinsights.com>"]
readme = "README.md"
packages = [
    { include = "routine.py" },
]

[tool.poetry.dependencies]
python = "^3.11.6"
click = "^8.1.7"
pudb = "^2023.1"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
routine = "routine:cli"
